// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminApps renderForm should return correctly 1`] = `
<Form>
  <Unknown>
    <Unknown>
      <Unknown>
        Admin Apps Filter Form
      </Unknown>
      <Unknown>
        Filter the result by App, Developer and Company
      </Unknown>
      <Unknown>
        <Unknown>
          <Unknown
            id="appName"
            labelText="App Name"
            name="appName"
            type="text"
          />
        </Unknown>
        <Unknown>
          <Unknown
            id="developerName"
            labelText="Developer Name"
            name="developerName"
            type="text"
          />
        </Unknown>
        <Unknown>
          <Unknown
            id="companyName"
            labelText="Company Name"
            name="companyName"
            type="text"
          />
        </Unknown>
      </Unknown>
      <Unknown>
        <Unknown>
          <Unknown
            id="RegisteredFrom"
            labelText="Registered From"
            name="RegisteredFrom"
            reactDatePickerProps={
              Object {
                "endDate": "",
                "selectsStart": true,
                "startDate": "",
              }
            }
          />
        </Unknown>
        <Unknown>
          <Unknown
            id="RegisteredTo"
            labelText="Registered To"
            name="RegisteredTo"
            reactDatePickerProps={
              Object {
                "endDate": "",
                "minDate": "",
                "selectsEnd": true,
                "startDate": "",
              }
            }
          />
        </Unknown>
        <Unknown>
          <Unknown
            disabled={true}
            type="submit"
            variant="primary"
          >
            Search
          </Unknown>
          <Unknown
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            Refresh
          </Unknown>
        </Unknown>
      </Unknown>
    </Unknown>
  </Unknown>
</Form>
`;

exports[`AdminApps should match a snapshot when LOADING false 1`] = `
<Connect(ErrorBoundary)>
  <Component
    data-test="revision-list-container"
    flexColumn={true}
    hasBackground={true}
    hasPadding={true}
  >
    <div
      className="mb-5"
    >
      <Component>
        App Management
      </Component>
      <Formik
        initialValues={
          Object {
            "RegisteredFrom": "",
            "RegisteredTo": "",
            "page": 1,
          }
        }
        onSubmit={[Function]}
      >
        <Component />
      </Formik>
    </div>
    <div>
      <Component
        hasPadding={true}
      >
        <span>
          Total apps: 
          6
        </span>
      </Component>
      <div
        className="mb-5"
      >
        <Component
          columns={
            Array [
              Object {
                "Header": "AppID",
                "accessor": "id",
              },
              Object {
                "Header": "App Name",
                "accessor": "name",
              },
              Object {
                "Header": "App Summary",
                "accessor": "summary",
              },
              Object {
                "Header": "Developer Name",
                "accessor": "developer",
              },
              Object {
                "Header": "Is Listed",
                "accessor": "isListed",
              },
              Object {
                "Header": "Pending Revisions",
                "accessor": "pendingRevisions",
              },
              Object {
                "Header": "Direct API",
                "accessor": "isDirectApi",
              },
              Object {
                "Cell": [Function],
                "Header": "Created",
                "accessor": "created",
              },
              Object {
                "Cell": [Function],
                "Header": "Featured",
                "accessor": "isFeatured",
              },
              Object {
                "Cell": [Function],
                "id": "Delete",
              },
            ]
          }
          data={
            Array [
              Object {
                "created": "2020-02-02T10:45:57",
                "developer": "Pete's Proptech World Ltd",
                "developerId": "28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                "homePage": "http://google.com/abc",
                "iconUri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png",
                "id": "09043eb8-9e5e-4650-b7f1-f0cb62699027",
                "links": Array [
                  Object {
                    "action": "GET",
                    "href": "http://platformdemo.reapit.net/marketplace/apps/09043eb8-9e5e-4650-b7f1-f0cb62699027",
                    "rel": "self",
                  },
                  Object {
                    "action": "GET",
                    "href": "http://platformdemo.reapit.net/marketplace/developers/28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                    "rel": "developer",
                  },
                ],
                "name": "test",
                "summary": "nXXT2zaK807ysWgy8F0WEhIYRP3TgosAtfuiLtQCImoSx0kynxbIF0nkGHU36Oz13kM3DG0Bcsicr8L6eWFKLBg4axlmiOEWcvwHAbBP9LRvoFkCl58k1wjhOExnpaZItEyOT1AXVKv8PE44aMGtVz",
              },
              Object {
                "created": "2020-02-02T10:45:57",
                "developer": "Pete's Proptech World Ltd",
                "developerId": "28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                "homePage": "http://www.contoso.com/path",
                "iconUri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream",
                "id": "261da083-cee2-4f5c-a18f-8f9375f1f5af",
                "links": Array [
                  Object {
                    "action": "GET",
                    "href": "http://platformdemo.reapit.net/marketplace/apps/261da083-cee2-4f5c-a18f-8f9375f1f5af",
                    "rel": "self",
                  },
                  Object {
                    "action": "GET",
                    "href": "http://platformdemo.reapit.net/marketplace/developers/28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                    "rel": "developer",
                  },
                ],
                "name": "asd",
                "summary": "asdQiiAJTmXGxPin7pwUiCsepZWXz1EJS71eGlvgPKH4hpE6J8DRDpzP2kDdOwpQPr4aHCCwWwxBJwzARLa7wMpJh5J61GhmQjLfKZkcDd47L9WEfQYVYAj0DTPJP0BuUMAAg2",
              },
            ]
          }
          loading={false}
          scrollable={true}
        />
      </div>
    </div>
    <Component
      onChange={[Function]}
      pageNumber={1}
      pageSize={2}
      totalCount={6}
    />
  </Component>
  <AppDeleteModalWithRedux
    afterClose={[Function]}
    appId=""
    appName=""
    onDeleteSuccess={[Function]}
    visible={false}
  />
</Connect(ErrorBoundary)>
`;

exports[`AdminApps should match a snapshot when LOADING true 1`] = `
<Connect(ErrorBoundary)>
  <Component
    data-test="revision-list-container"
    flexColumn={true}
    hasBackground={true}
    hasPadding={true}
  >
    <div
      className="pin absolute flex items-center justify-center"
    >
      <Component />
    </div>
    <div
      className="mb-5"
    >
      <Component>
        App Management
      </Component>
      <Formik
        initialValues={
          Object {
            "RegisteredFrom": "",
            "RegisteredTo": "",
            "page": 1,
          }
        }
        onSubmit={[Function]}
      >
        <Component />
      </Formik>
    </div>
    <div>
      <Component
        hasPadding={true}
      >
        <span>
          Total apps: 
          6
        </span>
      </Component>
      <div
        className="mb-5"
      >
        <Component
          columns={
            Array [
              Object {
                "Header": "AppID",
                "accessor": "id",
              },
              Object {
                "Header": "App Name",
                "accessor": "name",
              },
              Object {
                "Header": "App Summary",
                "accessor": "summary",
              },
              Object {
                "Header": "Developer Name",
                "accessor": "developer",
              },
              Object {
                "Header": "Is Listed",
                "accessor": "isListed",
              },
              Object {
                "Header": "Pending Revisions",
                "accessor": "pendingRevisions",
              },
              Object {
                "Header": "Direct API",
                "accessor": "isDirectApi",
              },
              Object {
                "Cell": [Function],
                "Header": "Created",
                "accessor": "created",
              },
              Object {
                "Cell": [Function],
                "Header": "Featured",
                "accessor": "isFeatured",
              },
              Object {
                "Cell": [Function],
                "id": "Delete",
              },
            ]
          }
          data={
            Array [
              Object {
                "created": "2020-02-02T10:45:57",
                "developer": "Pete's Proptech World Ltd",
                "developerId": "28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                "homePage": "http://google.com/abc",
                "iconUri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png",
                "id": "09043eb8-9e5e-4650-b7f1-f0cb62699027",
                "links": Array [
                  Object {
                    "action": "GET",
                    "href": "http://platformdemo.reapit.net/marketplace/apps/09043eb8-9e5e-4650-b7f1-f0cb62699027",
                    "rel": "self",
                  },
                  Object {
                    "action": "GET",
                    "href": "http://platformdemo.reapit.net/marketplace/developers/28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                    "rel": "developer",
                  },
                ],
                "name": "test",
                "summary": "nXXT2zaK807ysWgy8F0WEhIYRP3TgosAtfuiLtQCImoSx0kynxbIF0nkGHU36Oz13kM3DG0Bcsicr8L6eWFKLBg4axlmiOEWcvwHAbBP9LRvoFkCl58k1wjhOExnpaZItEyOT1AXVKv8PE44aMGtVz",
              },
              Object {
                "created": "2020-02-02T10:45:57",
                "developer": "Pete's Proptech World Ltd",
                "developerId": "28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                "homePage": "http://www.contoso.com/path",
                "iconUri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream",
                "id": "261da083-cee2-4f5c-a18f-8f9375f1f5af",
                "links": Array [
                  Object {
                    "action": "GET",
                    "href": "http://platformdemo.reapit.net/marketplace/apps/261da083-cee2-4f5c-a18f-8f9375f1f5af",
                    "rel": "self",
                  },
                  Object {
                    "action": "GET",
                    "href": "http://platformdemo.reapit.net/marketplace/developers/28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                    "rel": "developer",
                  },
                ],
                "name": "asd",
                "summary": "asdQiiAJTmXGxPin7pwUiCsepZWXz1EJS71eGlvgPKH4hpE6J8DRDpzP2kDdOwpQPr4aHCCwWwxBJwzARLa7wMpJh5J61GhmQjLfKZkcDd47L9WEfQYVYAj0DTPJP0BuUMAAg2",
              },
            ]
          }
          loading={false}
          scrollable={true}
        />
      </div>
    </div>
    <Component
      onChange={[Function]}
      pageNumber={1}
      pageSize={2}
      totalCount={6}
    />
  </Component>
  <AppDeleteModalWithRedux
    afterClose={[Function]}
    appId=""
    appName=""
    onDeleteSuccess={[Function]}
    visible={false}
  />
</Connect(ErrorBoundary)>
`;
